welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:65: error: Unmatched closing brace '}' ignored here
}
^