welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlower(c:Color) {
	setCouleurBrosse(c);
	baisseBrosse();
	avance();
	avance();
	avance();
	recule();
	gauche();
	avance();
	recule();
	recule();
	leveBrosse();
}
growFlower (Color.RED);

def fF (c:Color) {
	setCouleurBrosse(c);
	avance();
	baisseBrosse();
	leveBrosse();
			  }

growFlower(Color.RED);
fF(Color.YELLOW);
for(i<-1 to 3) { avance(); }

growFlower(Color.CYAN);
fF(Color.YELLOW);
for(k<-1 to 5) {
		recule();
			}
droite();
for(j<-1 to 3) {
		avance();
			}
gauche();
avance();
avance();
avance();
growFlower(Color.ORANGE);
fF(Color.Yellow);
for(j<-1 to 3) {
		recule();
			}
droite();
avance();
avance();
growFlower(Color.PINK);
fF(Color.Yellow);
for(s<-1 to 3) {
	avance();
			}
growFlower(Color.GREEN);
fF(Color.YELLOW);
for(w<-1 to 5) {
			recule()
			}						
	
	
}

